<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.megahed.shoestoreinventory.ui.LoginFragment"/>
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="32dp"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment">

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/userName"
        android:layout_margin="3dp"
        android:padding="3dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:padding="3dp"
        android:layout_height="wrap_content"
        android:hint="@string/userName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="text"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/password"
        android:layout_margin="3dp"
        android:padding="3dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:padding="3dp"
        android:layout_height="wrap_content"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:inputType="textPassword"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:id="@+id/login"
        android:padding="3dp"
        android:textAllCaps="false"
        android:text="@string/login"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="3dp"
        android:padding="12dp"
        android:textAllCaps="false"
        android:text="@string/createAcc"/>

</LinearLayout>
</layout>