<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="instructionsViewModel"
            type="com.megahed.shoestoreinventory.ui.InstructionFragment" />
    </data>

    <!-- A ConstraintLayout is a ViewGroup which allows you to position and size widgets in a flexible way. -->

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.InstructionFragment">


    <TextView
        android:layout_width="wrap_content"
        android:text="@string/instructions"
        android:layout_margin="8dp"
        android:padding="5dp"
        android:id="@+id/instruction"
        android:layout_centerInParent="true"
        android:textSize="30sp"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/instructionsDesc"
        android:layout_margin="8dp"
        android:padding="5dp"
        android:layout_centerInParent="true"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/instruction"
        android:layout_height="wrap_content"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="3dp"
        android:id="@+id/next"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:padding="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/start"
        android:textAllCaps="false" />


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>