<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    android:padding="5dp"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:padding="3dp"
                android:layout_height="wrap_content"
                android:text="@string/shoeName" />
            <TextView
                android:id="@+id/shoe_name"
                android:padding="3dp"
                android:layout_marginStart="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/shoeName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:padding="3dp"
                android:layout_height="wrap_content"
                android:text="@string/company" />
            <TextView
                android:id="@+id/company"
                android:padding="3dp"
                android:layout_marginStart="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/company" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:padding="3dp"
                android:layout_height="wrap_content"
                android:text="@string/size" />
            <TextView
                android:id="@+id/size"
                android:padding="3dp"
                android:layout_marginStart="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:padding="3dp"
                android:layout_height="wrap_content"
                android:text="@string/description" />
            <TextView
                android:id="@+id/description"
                android:padding="3dp"
                android:layout_marginStart="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/description" />
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>